finished header and company info section

--- a/index.html
+++ b/index.html
@@ -3,24 +3,48 @@
 <html lang="en">
 
 <head>
+    <title>ohmyfood</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400&family=Shrikhand&display=swap" rel="stylesheet"> 
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400&family=Roboto:wght@400;700&family=Shrikhand&display=swap" rel="stylesheet"> 
+
+    <script src="https://kit.fontawesome.com/03f4cc4b4b.js" crossorigin="anonymous"></script>
+
+    <link href="css/normalize.css" type="text/css" rel="stylesheet">
     <link href="css/style.css" type="text/css" rel="stylesheet">
    
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 
 <body>
 
-    <header class="block">
-        <p class="block__element">This is a test!</p>
-
-
+    <header class="header">
+        <b class="header__text">ohmyfood</b>
     </header>
 
+   <main>
+    <section class="company-info">
+    
+            <p class="company-info__location"> <i class="fas fa-map-marker-alt"></i>Paris, Belleville</p>
 
+            <p class="company-info__title">Book the menu you like</p>
 
+            <p class="company-info__text">Discover top-of-the-art restaurants we picked for you</p>
 
+            <a href="#"><button type="button" class="button">Explore our restaurants</button></a>
 
+    
 
+    </section>
+   </main>
 </body>
 
 
