finished first restaurant card

--- a/index.html
+++ b/index.html
@@ -64,7 +64,12 @@
             <section class="cards">
 
                 <div class="card-1">
-                    
+                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant" style="width:100%">
+                    <div class="card-1__container">
+                        <h3>The Full Palette</h3>
+                        <p>New York   </p>
+                        <p > <span class="heart-empty"><i class="far fa-heart"></i></span> <span class="heart"><i class="fa fa-heart"></i> </span> </p>
+                    </div>
                 </div>
 
                 <div class="card-2">
