working on footer

--- a/index.html
+++ b/index.html
@@ -63,31 +63,62 @@
 
             <section class="cards">
 
-                <div class="card-1">
+                <div class="card">
                     <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant" style="width:100%">
-                    <div class="card-1__container">
+                    <div class="card__container">
                         <h3>The Full Palette</h3>
                         <p>New York   </p>
                         <p > <span class="heart-empty"><i class="far fa-heart"></i></span> <span class="heart"><i class="fa fa-heart"></i> </span> </p>
                     </div>
                 </div>
 
-                <div class="card-2">
-
+                <div class="card">
+                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant" style="width:100%">
+                    <div class="card__container">
+                        <h3>The Full Palette</h3>
+                        <p>New York   </p>
+                        <p > <span class="heart-empty"><i class="far fa-heart"></i></span> <span class="heart"><i class="fa fa-heart"></i> </span> </p>
+                    </div>
                 </div>
 
-                <div class="card-3">
-
+                <div class="card">
+                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant" style="width:100%">
+                    <div class="card__container">
+                        <h3>The Full Palette</h3>
+                        <p>New York   </p>
+                        <p > <span class="heart-empty"><i class="far fa-heart"></i></span> <span class="heart"><i class="fa fa-heart"></i> </span> </p>
+                    </div>
                 </div>
 
-                <div class="card-4">
-
+                <div class="card">
+                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant" style="width:100%">
+                    <div class="card__container">
+                        <h3>The Full Palette</h3>
+                        <p>New York   </p>
+                        <p > <span class="heart-empty"><i class="far fa-heart"></i></span> <span class="heart"><i class="fa fa-heart"></i> </span> </p>
+                    </div>
                 </div>
             </section>
 
             
 
         </section>
+
+        <footer>
+
+            <h2>ohmyfood</h2>
+
+            <ul>
+                <a href="#"><li>Suggest a restaurant</li></a>
+                <a href="#"><li>Become a parter</li></a>
+                <a href="#"><li>Legal</li></a>
+                <a href="#"><li>Contact</li></a>
+
+
+            </ul>
+
+        </footer>
+
     </main>
 </body>
 
