--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
             <h2>ohmyfood</h2>
 
-            <ul>
+            <ul class="footer__links">
                 <a href="#"><li>Suggest a restaurant</li></a>
                 <a href="#"><li>Become a parter</li></a>
                 <a href="#"><li>Legal</li></a>
