fixed issue with some element sizes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
 
             <p class="company-info__text">Discover top-of-the-art restaurants we picked for you</p>
 
-            <a href="#"><button type="button" class="button">Explore our restaurants</button></a>
+            <a href="#" class="button-link"><div class="button">
+                
+                <p>Explore our restaurants</p>
+
+
+            </div></a>
 
 
 
@@ -52,9 +57,12 @@
         <section class="how-it-works">
             <p>How it works</p>
             <ol>
-                <li> <span class="how-it-works__numbers">1</span> <i class="fas fa-mobile-alt"></i> Choose a restaurant</li>
-                <li> <span class="how-it-works__numbers">2</span> <i class="fas fa-align-justify"></i> Create your menu</li>
-                <li> <span class="how-it-works__numbers">3</span> <i class="fas fa-store"></i> Go enjoy it at the restaurant</li>
+                <li> <span class="how-it-works__numbers">1</span> <i class="fas fa-mobile-alt"></i> Choose a restaurant
+                </li>
+                <li> <span class="how-it-works__numbers">2</span> <i class="fas fa-align-justify"></i> Create your menu
+                </li>
+                <li> <span class="how-it-works__numbers">3</span> <i class="fas fa-store"></i> Go enjoy it at the
+                    restaurant</li>
             </ol>
         </section>
 
@@ -64,43 +72,47 @@
             <section class="cards">
 
                 <div class="card">
-                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant" style="width:100%">
+                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant">
                     <div class="card__container">
                         <h3>The Full Palette</h3>
-                        <p>New York   </p>
-                        <p > <span class="heart-empty"><i class="far fa-heart"></i></span> <span class="heart"><i class="fa fa-heart"></i> </span> </p>
+                        <p>New York</p>
+                        <p> <span class="heart-empty"><i class="far fa-heart"></i></span> <span class="heart"><i
+                                    class="fa fa-heart"></i> </span> </p>
                     </div>
                 </div>
 
                 <div class="card">
-                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant" style="width:100%">
+                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant">
                     <div class="card__container">
                         <h3>The Full Palette</h3>
-                        <p>New York   </p>
-                        <p > <span class="heart-empty"><i class="far fa-heart"></i></span> <span class="heart"><i class="fa fa-heart"></i> </span> </p>
+                        <p>New York </p>
+                        <p> <span class="heart-empty"><i class="far fa-heart"></i></span> <span class="heart"><i
+                                    class="fa fa-heart"></i> </span> </p>
                     </div>
                 </div>
 
                 <div class="card">
-                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant" style="width:100%">
+                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant">
                     <div class="card__container">
                         <h3>The Full Palette</h3>
-                        <p>New York   </p>
-                        <p > <span class="heart-empty"><i class="far fa-heart"></i></span> <span class="heart"><i class="fa fa-heart"></i> </span> </p>
+                        <p>New York </p>
+                        <p> <span class="heart-empty"><i class="far fa-heart"></i></span> <span class="heart"><i
+                                    class="fa fa-heart"></i> </span> </p>
                     </div>
                 </div>
 
                 <div class="card">
-                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant" style="width:100%">
+                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant">
                     <div class="card__container">
                         <h3>The Full Palette</h3>
-                        <p>New York   </p>
-                        <p > <span class="heart-empty"><i class="far fa-heart"></i></span> <span class="heart"><i class="fa fa-heart"></i> </span> </p>
+                        <p>New York </p>
+                        <p> <span class="heart-empty"><i class="far fa-heart"></i></span> <span class="heart"><i
+                                    class="fa fa-heart"></i> </span> </p>
                     </div>
                 </div>
             </section>
 
-            
+
 
         </section>
 
@@ -109,12 +121,10 @@
             <h2>ohmyfood</h2>
 
             <ul class="footer__links">
-                <a href="#"><li>Suggest a restaurant</li></a>
-                <a href="#"><li>Become a parter</li></a>
-                <a href="#"><li>Legal</li></a>
-                <a href="#"><li>Contact</li></a>
-
-
+                <li><a href="#">Suggest a restaurant</a></li>
+                <li><a href="#">Become a parter</a></li>
+                <li><a href="#">Legal</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
 
         </footer>
