cleaned up heart animation code

--- a/index.html
+++ b/index.html
@@ -79,11 +79,15 @@
                 <a href="menu-1.html">
                     <div class="card">
                         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant">
+
                         <div class="container">
                             <h3>The Full Palette</h3>
                             <p>New York</p>
-                            <span class="heart-empty"><i class="far fa-heart"></i></span> <span class="heart"><i
-                                    class="fa fa-heart"></i> </span>
+
+                            <div class="container__like">
+                                <span class="heart-empty"><i class="far fa-heart"></i></span> <span class="heart"><i
+                                        class="fa fa-heart"></i> </span>
+                            </div>
                         </div>
                     </div>
                 </a>
@@ -91,12 +95,15 @@
                 <a href="menu-1.html">
                     <div class="card">
                         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant">
+
                         <div class="container">
                             <h3>The Full Palette</h3>
                             <p>New York </p>
 
-                            <div><span class="heart-empty"><i class="far fa-heart"></i></span> <span class="heart"><i
-                                        class="fa fa-heart"></i> </span> </div>
+                            <div class="container__like">
+                                <span class="heart-empty"><i class="far fa-heart"></i></span> <span class="heart"><i
+                                        class="fa fa-heart"></i> </span>
+                            </div>
 
 
                         </div>
@@ -106,24 +113,35 @@
                 <a href="menu-1.html">
                     <div class="card">
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant">
+
                         <div class="container">
                             <h3>The Full Palette</h3>
                             <p>New York </p>
-                            <span class="heart-empty"><i class="far fa-heart"></i></span> <span class="heart"><i
-                                    class="fa fa-heart"></i> </span>
+
+                            <div class="container__like">
+                                <span class="heart-empty"><i class="far fa-heart"></i></span> <span class="heart"><i
+                                        class="fa fa-heart"></i> </span>
+                            </div>
                         </div>
                     </div>
                 </a>
+
                 <!-- card 4 -->
                 <a href="menu-1.html">
                     <div class="card">
+
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                             alt="restaurant">
+
                         <div class="container">
                             <h3>The Full Palette</h3>
                             <p>New York </p>
-                            <span class="heart-empty"><i class="far fa-heart"></i></span> <span class="heart"><i
-                                    class="fa fa-heart"></i> </span>
+
+                            <div class="container__like">
+                                <span class="heart-empty"><i class="far fa-heart"></i></span> <span class="heart"><i
+                                        class="fa fa-heart"></i> </span>
+                            </div>
+
                         </div>
                     </div>
                 </a>
