made mouse pointer change when hovering over menu items

--- a/menu-1.html
+++ b/menu-1.html
@@ -36,7 +36,7 @@
         <section class="name">
 
             <div class="container container__menu">
-                <h2>Bastille </h2>
+                <h2> The Full Palette </h2>
 
                 <div>
                     <div class="container__heart"><span class="heart-empty"><i class="far fa-heart"></i></span>
@@ -67,7 +67,7 @@
 
                 <div class="food-card__text">
                     <h4>Citrus Squid Carpaccio</h4>
-                    <p>With------------------------orange zest</p>
+                    <p>With------------------------------orange zest</p>
                 </div>
 
                 <p class="cost">25</p>
