--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
 
 
 <body>
+    
     <div class="loading">
         <div class="spinner"></div>
     </div>
+
     <header class="header">
         <b class="header__text">ohmyfood</b>
     </header>
@@ -78,7 +80,14 @@
                 <!-- card 1 -->
                 <a href="menu-1.html">
                     <div class="card">
-                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant">
+
+                        <div class="card__image">
+
+                            <p class="card__new">New</p>
+                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant">
+
+                        </div>
+
 
                         <div class="container">
                             <h3>The Full Palette</h3>
@@ -94,10 +103,16 @@
                 <!-- card 2 -->
                 <a href="menu-1.html">
                     <div class="card">
-                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant">
+
+                        <div class="card__image">
+
+                            <p class="card__new">New</p>
+                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant">
+
+                        </div>
 
                         <div class="container">
-                            <h3>The Full Palette</h3>
+                            <h3>The Enchanted Plate</h3>
                             <p>New York </p>
 
                             <div class="container__like">
@@ -115,7 +130,7 @@
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant">
 
                         <div class="container">
-                            <h3>The Full Palette</h3>
+                            <h3>Bastille</h3>
                             <p>New York </p>
 
                             <div class="container__like">
@@ -134,7 +149,7 @@
                             alt="restaurant">
 
                         <div class="container">
-                            <h3>The Full Palette</h3>
+                            <h3>Le Gourmand</h3>
                             <p>New York </p>
 
                             <div class="container__like">
