fixed horizontal scrolling issue

--- a/menu-1.html
+++ b/menu-1.html
@@ -70,7 +70,7 @@
                     <p>With------------------------------orange zest</p>
                 </div>
 
-                <p class="cost">25</p>
+                <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
 
                 <div class="card-animation">
 
@@ -92,7 +92,7 @@
                     <p>With------------------------orange zest</p>
                 </div>
 
-                <p class="cost">25</p>
+                <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
 
                 <div class="card-animation">
 
@@ -114,7 +114,7 @@
                     <p>With------------------------orange zest</p>
                 </div>
 
-                <p class="cost">25</p>
+                <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
 
                 <div class="card-animation">
 
