--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
             <h2>ohmyfood</h2>
 
             <ul class="footer__links">
-                <li><a href="#">Suggest a restaurant</a></li>
-                <li><a href="#">Become a parter</a></li>
+                <li><a href="#"> <i class="fas fa-utensils"></i> Suggest a restaurant</a></li>
+                <li><a href="#"> <i class="fas fa-hands-helping"></i> Become a parter</a></li>
                 <li><a href="#">Legal</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
