--- a/menu-1.html
+++ b/menu-1.html
@@ -29,7 +29,7 @@
 
 <body>
     <header class="header header-menu">
-        <a href="index.html"> <i class="fas fa-arrow-left"></i> <b class="header__text">ohmyfood</b></a>
+        <a href="index.html"> <i class="fas fa-arrow-left"></i> <b class="header-menu__text">ohmyfood</b></a>
 
         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
 
@@ -53,7 +53,7 @@
 
 
     <main class="menu">
-
+           <!-- Entrees -->
         <section class="menu-area">
 
             <div class="menu-area__fade menu-area__fade-1"></div>
@@ -134,7 +134,7 @@
 
 
         </section>
-
+           <!-- Main dish -->
         <section class="menu-area">
             <div class="menu-area__fade menu-area__fade-2"></div>
             </div>
@@ -213,7 +213,7 @@
 
 
         </section>
-
+           <!-- Desserts -->
         <section class="menu-area">
             <div class="menu-area__fade menu-area__fade-3"> </div>
             <h3>ENTREES</h3>
@@ -303,8 +303,8 @@
             <h2>ohmyfood</h2>
 
             <ul class="footer__links">
-                <li><a href="#">Suggest a restaurant</a></li>
-                <li><a href="#">Become a parter</a></li>
+                <li><a href="#"> <i class="fas fa-utensils"></i> Suggest a restaurant</a></li>
+                <li><a href="#"> <i class="fas fa-hands-helping"></i> Become a parter</a></li>
                 <li><a href="#">Legal</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
