--- a/menu-1.html
+++ b/menu-1.html
@@ -138,7 +138,7 @@
         <section class="menu-area">
             <div class="menu-area__fade menu-area__fade-2"></div>
             </div>
-            <h3>ENTREES</h3>
+            <h3>MAIN DISH</h3>
 
             <section class="food-card">
 
@@ -149,7 +149,7 @@
                     <p>With------------------------orange zest</p>
                 </div>
 
-                <p class="cost">25</p>
+                <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
 
                 <div class="card-animation">
 
@@ -171,7 +171,7 @@
                     <p>With------------------------orange zest</p>
                 </div>
 
-                <p class="cost">25</p>
+                <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
 
                 <div class="card-animation">
 
@@ -193,7 +193,7 @@
                     <p>With------------------------orange zest</p>
                 </div>
 
-                <p class="cost">25</p>
+                <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
 
                 <div class="card-animation">
 
@@ -216,18 +216,18 @@
            <!-- Desserts -->
         <section class="menu-area">
             <div class="menu-area__fade menu-area__fade-3"> </div>
-            <h3>ENTREES</h3>
+
+
+            <h3>DESSERTS</h3>
 
             <section class="food-card">
-
-
 
                 <div class="food-card__text">
                     <h4>Citrus Squid Carpaccio</h4>
                     <p>With------------------------orange zest</p>
                 </div>
 
-                <p class="cost">25</p>
+                <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
 
                 <div class="card-animation">
 
@@ -242,14 +242,12 @@
             </section>
             <section class="food-card">
 
-
-
                 <div class="food-card__text">
                     <h4>Citrus Squid Carpaccio</h4>
                     <p>With------------------------orange zest</p>
                 </div>
 
-                <p class="cost">25</p>
+                <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
 
                 <div class="card-animation">
 
@@ -264,14 +262,12 @@
             </section>
             <section class="food-card">
 
-
-
                 <div class="food-card__text">
                     <h4>Citrus Squid Carpaccio</h4>
                     <p>With------------------------orange zest</p>
                 </div>
 
-                <p class="cost">25</p>
+                <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
 
                 <div class="card-animation">
 
