added upward animation to menu sections

--- a/menu-1.html
+++ b/menu-1.html
@@ -54,7 +54,7 @@
 
     <main class="menu">
            <!-- Entrees -->
-        <section class="menu-area">
+        <section class="menu-area ">
 
             <div class="menu-area__fade menu-area__fade-1"></div>
             </div>
@@ -135,7 +135,7 @@
 
         </section>
            <!-- Main dish -->
-        <section class="menu-area">
+        <section class="menu-area menu-area__2">
             <div class="menu-area__fade menu-area__fade-2"></div>
             </div>
             <h3>MAIN DISH</h3>
@@ -214,7 +214,7 @@
 
         </section>
            <!-- Desserts -->
-        <section class="menu-area">
+        <section class="menu-area menu-area__3">
             <div class="menu-area__fade menu-area__fade-3"> </div>
 
 
