--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
             <ul class="footer__links">
                 <li><a href="#"> <i class="fas fa-utensils"></i> Suggest a restaurant</a></li>
-                <li><a href="#"> <i class="fas fa-hands-helping"></i> Become a parter</a></li>
+                <li><a href="#"> <i class="fas fa-hands-helping"></i> Become a partner</a></li>
                 <li><a href="#">Legal</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
