created other menu pages

--- a/menu-3.html
+++ b/menu-3.html
@@ -31,7 +31,7 @@
     <header class="header header-menu">
         <a href="index.html"> <i class="fas fa-arrow-left"></i> <b class="header-menu__text">ohmyfood</b></a>
 
-        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
 
         <section class="name">
 
@@ -64,8 +64,8 @@
             <section class="food-card">
 
                 <div class="food-card__text">
-                    <h4>Escargot</h4>
-                    <p>With southern French spices</p>
+                    <h4>Citrus Squid Carpaccio</h4>
+                    <p>With orange zest</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -81,13 +81,14 @@
 
 
             </section>
+
             <section class="food-card">
 
 
 
                 <div class="food-card__text">
-                    <h4>Duck Foie Gras</h4>
-                    <p>With black truffle shavings</p>
+                    <h4>Grandmother's Vegetable Soup</h4>
+                    <p>Carrots, parsnips, Jerusalam artichoke</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -103,13 +104,12 @@
 
 
             </section>
+
             <section class="food-card">
 
-
-
                 <div class="food-card__text">
-                    <h4>Fried egg</h4>
-                    <p>Seasoned with truffle cream and...</p>
+                    <h4>Onion Soup</h4>
+                    <p>Revisited</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -138,31 +138,8 @@
             <section class="food-card">
 
                 <div class="food-card__text">
-                    <h4>Herb-Encrusted Steak</h4>
-                    <p>With delicately sliced and seasoned...</p>
-                </div>
-
-                <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
-
-                <div class="card-animation">
-
-                    <i class="fas fa-check"></i>
-
-                </div>
-
-
-
-
-
-            </section>
-
-            <section class="food-card">
-
-
-
-                <div class="food-card__text">
-                    <h4>Ox Tail Shepard's Pie</h4>
-                    <p>With black truffle and pureed parsnips</p>
+                    <h4>Scallops</h4>
+                    <p>With  mashed parsnip</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -182,8 +159,29 @@
             <section class="food-card">
 
                 <div class="food-card__text">
-                    <h4>Filet of Sole</h4>
-                    <p>With citrus dressing</p>
+                    <h4>Magret de canard</h4>
+                    <p>With  mashed potatoes</p>
+                </div>
+
+                <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
+
+                <div class="card-animation">
+
+                    <i class="fas fa-check"></i>
+
+                </div>
+
+
+
+
+
+            </section>
+
+            <section class="food-card">
+
+                <div class="food-card__text">
+                    <h4>Game Hen</h4>
+                    <p>With Vegetable gnocchis</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -212,8 +210,8 @@
             <section class="food-card">
 
                 <div class="food-card__text">
-                    <h4>Paris-Breast</h4>
-                    <p>Revisted</p>
+                    <h4>Floral ice Cream</h4>
+                    <p>With hazelnut butter</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -233,8 +231,8 @@
             <section class="food-card">
 
                 <div class="food-card__text">
-                    <h4>Chocolate Macaroons</h4>
-                    <p>With vanilla ice cream</p>
+                    <h4>Chocolate Lava Cake</h4>
+                    <p>Revisited</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -254,8 +252,8 @@
             <section class="food-card">
 
                 <div class="food-card__text">
-                    <h4>Chocolate Mouse</h4>
-                    <p>With spices and black truffle</p>
+                    <h4>Napolean</h4>
+                    <p>With blueberries and marzipan</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
