--- a/menu-4.html
+++ b/menu-4.html
@@ -31,12 +31,12 @@
     <header class="header header-menu">
         <a href="index.html"> <i class="fas fa-arrow-left"></i> <b class="header-menu__text">ohmyfood</b></a>
 
-        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
 
         <section class="name">
 
             <div class="container container__menu">
-                <h2> The Full Palette </h2>
+                <h2> Le Gourmand </h2>
 
                 <div>
                     <div class="container__heart"><span class="heart-empty"><i class="far fa-heart"></i></span>
@@ -51,8 +51,8 @@
     </header>
 
 
-
     <main class="menu">
+
            <!-- Entrees -->
         <section class="menu-area ">
 
@@ -64,8 +64,8 @@
             <section class="food-card">
 
                 <div class="food-card__text">
-                    <h4>Escargot</h4>
-                    <p>With southern French spices</p>
+                    <h4>Tuna Carpaccio</h4>
+                    <p>Seasoned with yuzu</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -81,13 +81,12 @@
 
 
             </section>
+
             <section class="food-card">
 
-
-
                 <div class="food-card__text">
-                    <h4>Duck Foie Gras</h4>
-                    <p>With black truffle shavings</p>
+                    <h4>Crunchy Lobster Croquets</h4>
+                    <p>With seasoned vegetables</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -103,13 +102,12 @@
 
 
             </section>
+
             <section class="food-card">
 
-
-
                 <div class="food-card__text">
-                    <h4>Fried egg</h4>
-                    <p>Seasoned with truffle cream and...</p>
+                    <h4>Mushroom soup</h4>
+                    <p>With truffles</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -138,8 +136,8 @@
             <section class="food-card">
 
                 <div class="food-card__text">
-                    <h4>Herb-Encrusted Steak</h4>
-                    <p>With delicately sliced and seasoned...</p>
+                    <h4>Roast Chicken with Provincal Herbs</h4>
+                    <p>With truffle cream</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -161,8 +159,8 @@
 
 
                 <div class="food-card__text">
-                    <h4>Ox Tail Shepard's Pie</h4>
-                    <p>With black truffle and pureed parsnips</p>
+                    <h4>Roasted Lobster</h4>
+                    <p>With seasoned vegetables</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -182,8 +180,8 @@
             <section class="food-card">
 
                 <div class="food-card__text">
-                    <h4>Filet of Sole</h4>
-                    <p>With citrus dressing</p>
+                    <h4>Angust Beef Ribs</h4>
+                    <p>With mashed parsnips</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -212,8 +210,8 @@
             <section class="food-card">
 
                 <div class="food-card__text">
-                    <h4>Paris-Breast</h4>
-                    <p>Revisted</p>
+                    <h4>Assorted Dessert Plate</h4>
+                    <p>Chef's choice</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -233,8 +231,8 @@
             <section class="food-card">
 
                 <div class="food-card__text">
-                    <h4>Chocolate Macaroons</h4>
-                    <p>With vanilla ice cream</p>
+                    <h4>Creme brulee</h4>
+                    <p>Rivisited</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -254,8 +252,8 @@
             <section class="food-card">
 
                 <div class="food-card__text">
-                    <h4>Chocolate Mouse</h4>
-                    <p>With spices and black truffle</p>
+                    <h4>Tiramisu</h4>
+                    <p>With hazelnut</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -297,8 +295,6 @@
             </ul>
 
         </footer>
-
-
 
 
     </main>
