--- a/menu-2.html
+++ b/menu-2.html
@@ -31,12 +31,12 @@
     <header class="header header-menu">
         <a href="index.html"> <i class="fas fa-arrow-left"></i> <b class="header-menu__text">ohmyfood</b></a>
 
-        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
 
         <section class="name">
 
             <div class="container container__menu">
-                <h2> The Full Palette </h2>
+                <h2> The Enchtanted Plate</h2>
 
                 <div>
                     <div class="container__heart"><span class="heart-empty"><i class="far fa-heart"></i></span>
@@ -64,8 +64,8 @@
             <section class="food-card">
 
                 <div class="food-card__text">
-                    <h4>Escargot</h4>
-                    <p>With southern French spices</p>
+                    <h4>Foie Gras Ravioli</h4>
+                    <p>With truffle cream</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -81,35 +81,37 @@
 
 
             </section>
+
+            <section class="food-card">
+
+
+
+                <div class="food-card__text">
+                    <h4>Oscietra Caviar</h4>
+                    <p>With buckwheat blinis</p>
+                </div>
+
+                <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
+
+                <div class="card-animation">
+
+                    <i class="fas fa-check"></i>
+
+                </div>
+
+
+
+
+
+            </section>
+
             <section class="food-card">
 
 
 
                 <div class="food-card__text">
                     <h4>Duck Foie Gras</h4>
-                    <p>With black truffle shavings</p>
-                </div>
-
-                <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
-
-                <div class="card-animation">
-
-                    <i class="fas fa-check"></i>
-
-                </div>
-
-
-
-
-
-            </section>
-            <section class="food-card">
-
-
-
-                <div class="food-card__text">
-                    <h4>Fried egg</h4>
-                    <p>Seasoned with truffle cream and...</p>
+                    <p>With fig jam and grilled baguette</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -138,8 +140,8 @@
             <section class="food-card">
 
                 <div class="food-card__text">
-                    <h4>Herb-Encrusted Steak</h4>
-                    <p>With delicately sliced and seasoned...</p>
+                    <h4>Fresh buttered Scallops</h4>
+                    <p>With white celery puree</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -161,8 +163,8 @@
 
 
                 <div class="food-card__text">
-                    <h4>Ox Tail Shepard's Pie</h4>
-                    <p>With black truffle and pureed parsnips</p>
+                    <h4>Pan-Fried Lobster</h4>
+                    <p>With mashed sweet potatoes</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -182,8 +184,8 @@
             <section class="food-card">
 
                 <div class="food-card__text">
-                    <h4>Filet of Sole</h4>
-                    <p>With citrus dressing</p>
+                    <h4>Braised Ox Tail</h4>
+                    <p>With wild rice amd lemon zest</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -212,8 +214,8 @@
             <section class="food-card">
 
                 <div class="food-card__text">
-                    <h4>Paris-Breast</h4>
-                    <p>Revisted</p>
+                    <h4>Chocolate and Hazelnut Macaroon</h4>
+                    <p>With caramel butter ice cream</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -233,8 +235,8 @@
             <section class="food-card">
 
                 <div class="food-card__text">
-                    <h4>Chocolate Macaroons</h4>
-                    <p>With vanilla ice cream</p>
+                    <h4>Baba au rhum</h4>
+                    <p>With lemon drizzle</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -254,8 +256,8 @@
             <section class="food-card">
 
                 <div class="food-card__text">
-                    <h4>Chocolate Mouse</h4>
-                    <p>With spices and black truffle</p>
+                    <h4>Lemon Meringue Pie</h4>
+                    <p>Destructured</p>
                 </div>
 
                 <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
@@ -271,10 +273,6 @@
 
 
             </section>
-
-
-
-
 
 
         </section>
@@ -283,7 +281,6 @@
 
             <p class="button">Order</p>
         </div>
-
 
         <footer>
 
