finished the menu pages

--- a/menu-2.html
+++ b/menu-2.html
@@ -54,7 +54,7 @@
 
     <main class="menu">
            <!-- Entrees -->
-        <section class="menu-area ">
+        <section class="menu-area  menu-area__large  ">
 
             <div class="menu-area__fade menu-area__fade-1"></div>
             </div>
@@ -91,7 +91,28 @@
                     <p>With buckwheat blinis</p>
                 </div>
 
-                <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
+                <p class="cost">35 <i class="fas fa-euro-sign"></i> </p>
+
+                <div class="card-animation">
+
+                    <i class="fas fa-check"></i>
+
+                </div>
+
+
+
+
+
+            </section>
+
+            <section class="food-card">
+
+                <div class="food-card__text">
+                    <h4>Lobster and Leek Foem</h4>
+                    <p>Marinated with orange zest</p>
+                </div>
+
+                <p class="cost">20 <i class="fas fa-euro-sign"></i> </p>
 
                 <div class="card-animation">
 
@@ -114,7 +135,7 @@
                     <p>With fig jam and grilled baguette</p>
                 </div>
 
-                <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
+                <p class="cost">35 <i class="fas fa-euro-sign"></i> </p>
 
                 <div class="card-animation">
 
@@ -144,7 +165,7 @@
                     <p>With white celery puree</p>
                 </div>
 
-                <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
+                <p class="cost">40 <i class="fas fa-euro-sign"></i> </p>
 
                 <div class="card-animation">
 
@@ -167,7 +188,7 @@
                     <p>With mashed sweet potatoes</p>
                 </div>
 
-                <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
+                <p class="cost">35 <i class="fas fa-euro-sign"></i> </p>
 
                 <div class="card-animation">
 
@@ -188,7 +209,7 @@
                     <p>With wild rice amd lemon zest</p>
                 </div>
 
-                <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
+                <p class="cost">44 <i class="fas fa-euro-sign"></i> </p>
 
                 <div class="card-animation">
 
@@ -218,7 +239,7 @@
                     <p>With caramel butter ice cream</p>
                 </div>
 
-                <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
+                <p class="cost">18 <i class="fas fa-euro-sign"></i> </p>
 
                 <div class="card-animation">
 
@@ -239,7 +260,7 @@
                     <p>With lemon drizzle</p>
                 </div>
 
-                <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
+                <p class="cost">22 <i class="fas fa-euro-sign"></i> </p>
 
                 <div class="card-animation">
 
@@ -260,7 +281,7 @@
                     <p>Destructured</p>
                 </div>
 
-                <p class="cost">25 <i class="fas fa-euro-sign"></i> </p>
+                <p class="cost">23 <i class="fas fa-euro-sign"></i> </p>
 
                 <div class="card-animation">
 
