--- a/menu-3.html
+++ b/menu-3.html
@@ -36,7 +36,7 @@
         <section class="name">
 
             <div class="container container__menu">
-                <h2> The Full Palette </h2>
+                <h2> Bastille</h2>
 
                 <div>
                     <div class="container__heart"><span class="heart-empty"><i class="far fa-heart"></i></span>
